// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`player language service > completion > basic object completions 1`] = `
[
  {
    "documentation": "The text to display",
    "kind": 10,
    "label": "value",
  },
  {
    "documentation": "Any modifiers on the text",
    "kind": 10,
    "label": "modifiers",
  },
  {
    "documentation": "Evaluate the given expression (or boolean) and if falsy, remove this node from the tree. This is re-computed for each change in the data-model",
    "kind": 10,
    "label": "applicability",
  },
  {
    "documentation": "Adds a comment for the given node",
    "kind": 10,
    "label": "_comment",
  },
  {
    "documentation": "A list of templates to process for this node",
    "kind": 10,
    "label": "template",
  },
]
`;

exports[`player language service > completion > basic object completions 2`] = `
[
  {
    "documentation": "The name of the Flow to begin on",
    "kind": 10,
    "label": "BEGIN",
  },
]
`;

exports[`player language service > completion > basic value completions 1`] = `
[
  {
    "kind": 12,
    "label": "VIEW",
  },
  {
    "kind": 12,
    "label": "END",
  },
  {
    "kind": 12,
    "label": "FLOW",
  },
  {
    "kind": 12,
    "label": "ACTION",
  },
  {
    "kind": 12,
    "label": "EXTERNAL",
  },
]
`;

exports[`player language service > completion > schema completions 1`] = `
[
  {
    "kind": 12,
    "label": "",
  },
  {
    "kind": 12,
    "label": ".bar",
  },
  {
    "kind": 12,
    "label": ".baz",
  },
]
`;

exports[`player language service > hover > basic hover docs 1`] = `
{
  "contents": {
    "kind": "plaintext",
    "value": "Each asset requires a unique id per view",
  },
}
`;

exports[`player language service > hover > basic hover docs 2`] = `
{
  "contents": {
    "kind": "plaintext",
    "value": "The asset type determines the semantics of how a user interacts with a page",
  },
}
`;

exports[`player language service > hover > basic hover docs 3`] = `
{
  "contents": {
    "kind": "plaintext",
    "value": "Any initial data that the flow can use",
  },
}
`;

exports[`player language service > validation > throws AssetWrapper errors 1`] = `
[
  {
    "message": "Content Validation Error - type: Expected type "string" but got "null"",
    "range": {
      "end": {
        "character": 28,
        "line": 20,
      },
      "start": {
        "character": 16,
        "line": 20,
      },
    },
    "severity": 1,
  },
  {
    "message": "Content Validation Error - missing: Property "BEGIN" missing from type "Navigation"",
    "range": {
      "end": {
        "character": 26,
        "line": 16,
      },
      "start": {
        "character": 24,
        "line": 16,
      },
    },
    "severity": 1,
  },
  {
    "message": "Navigation Validation Error - missing: Property "BEGIN" missing from type "Navigation"",
    "range": {
      "end": {
        "character": 26,
        "line": 16,
      },
      "start": {
        "character": 24,
        "line": 16,
      },
    },
    "severity": 1,
  },
  {
    "message": "View is not reachable",
    "range": {
      "end": {
        "character": 33,
        "line": 5,
      },
      "start": {
        "character": 20,
        "line": 5,
      },
    },
    "severity": 2,
  },
  {
    "message": "View Validation Error - value: Does not match any of the expected types for type: 'AssetWrapperOrSwitch'",
    "range": {
      "end": {
        "character": 16,
        "line": 12,
      },
      "start": {
        "character": 23,
        "line": 8,
      },
    },
    "severity": 1,
  },
  {
    "message": "Implicit Array -> "collection" assets is not supported.",
    "range": {
      "end": {
        "character": 21,
        "line": 8,
      },
      "start": {
        "character": 14,
        "line": 8,
      },
    },
    "severity": 1,
  },
]
`;

exports[`player language service completion basic object completions 1`] = `
Array [
  Object {
    "documentation": "The text to display",
    "kind": 10,
    "label": "value",
  },
  {
    "documentation": "Any modifiers on the text",
    "kind": 10,
    "label": "modifiers",
  },
  {
    "documentation": "Evaluate the given expression (or boolean) and if falsy, remove this node from the tree. This is re-computed for each change in the data-model",
    "kind": 10,
    "label": "applicability",
  },
  Object {
    "documentation": "Adds a comment for the given node",
    "kind": 10,
    "label": "_comment",
  },
  Object {
    "documentation": "A list of templates to process for this node",
    "kind": 10,
    "label": "template",
  },
]
`;
